# devtools-deepin

./: CMakeLists.txt  PKGBUILD  pacman-deepin.conf
